--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,19 @@ version: '3.8'
 
 services:
   nginx:
-    image: openresty/openresty:latest
+    image: openresty/openresty:1.21.4.1-0-alpine
+    #image: nginx:latest
     container_name: nginx
+    env_file:
+      - .env.dev
+    environment:
+      - BURGONET_API_KEY_DEEPSEEK_V3=1234567890
+      - DEEPSEEK_API_KEY=123456789
     ports:
-      - "80:80"
+      - "8080:80"
     volumes:
-      - ./nginx-conf:/etc/nginx/conf.d
+      - ./nginx-conf/conf.d:/etc/nginx/conf.d
+      - ./nginx-conf/nginx.conf:/etc/nginx/nginx.conf
       - ./lua-scripts:/opt/lualib
     depends_on:
       - redis
