--- a/nginx-conf/conf.d/default.conf
+++ b/nginx-conf/conf.d/default.conf
@@ -21,7 +21,7 @@ log_format json_combined escape=json
 
 server {
     listen       80;
-    server_name  localhost;
+    server_name  _;
 
 
     access_log /var/log/nginx/access.log json_combined;
