--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,12 +34,8 @@ services:
       - "389:389"
       - "636:636"
     volumes:
-      - ldap_data:/var/lib/ldap
-      - ldap_config:/etc/ldap/slapd.d
-      - ./ldap-init:/container/service/slapd/assets/config/bootstrap/ldif/custom
+      - ./ldap-init/bootstrap.ldif:/container/service/slapd/assets/config/bootstrap/ldif/custom/50-bootstrap.ldif
     command: ["--loglevel", "debug", "--copy-service"]
 
 volumes:
   redis_data:
-  ldap_data:
-  ldap_config:
