--- a/nginx-conf/conf.d/default.conf
+++ b/nginx-conf/conf.d/default.conf
@@ -49,8 +49,10 @@ server {
         set $access_redis_host 'redis';
         set $access_redis_port 6379;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
-        echo "Hi 👋";
+        echo "Hi 👋👋👋";
     }
+
+# BURGONET
 
     location /api.deepseek.com/v3/chat/completions {
         set $apikey "";
