fix doc and remove path

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,6 +2,7 @@ site_name: Burgonet Gateway Documentation
 
 nav:
   - Home: index.md
+  - Technical Overview: technical.md
   - Screenshots: screenshots.md
   - About: about.md
 
@@ -9,6 +10,10 @@ theme:
   name: readthedocs
   analytics:
     gtag: GTM-TSWFRGBR
+
+plugins:
+  - search
+  - mermaid2
 
 
 
