--- a/nginx-conf/conf.d/burgonet.conf
+++ b/nginx-conf/conf.d/burgonet.conf
@@ -1,44 +1,8 @@
+resolver 127.0.0.11 valid=30s;
+log_format bgn_combined escape=json '{' '"time_local":"$time_local",' '"remote_addr":"$remote_addr",' '"remote_user":"$remote_user",' '"request":"$request",' '"status": "$status",' '"body_bytes_sent":"$body_bytes_sent",' '"request_time":"$request_time",' '"http_referrer":"$http_referer",' '"http_user_agent":"$http_user_agent",' '"http_x_forwarded_for":"$http_x_forwarded_for",' '"host":"$host",' '"upstream_addr":"$upstream_addr",' '"request_method":"$request_method",' '"http_version":"$server_protocol",' '"request_body":"$request_body",' '"response_body":"$resp_body",' '"provider":"$provider",' '"model_name":"$model_name",' '"model_version":"$model_version"' '}';
 server {
     listen 80;
     server_name _;
     set $resp_body '';
     body_filter_by_lua_file /etc/nginx/lua-scripts/body_filter.lua;
-    location /api.deepseek.com/v3/chat/completions {
-        set $apikey '';
-        set $access_redis_host redis;
-        set $access_redis_port 6379;
-        set $access_token_set nginx_tokens:bearer;
-        set $access_model_name deepseek;
-        set $access_model_version v3;
-        access_by_lua_file /etc/nginx/lua-scripts/access.lua;
-        proxy_pass https://api.deepseek.com;
-        proxy_ssl_server_name on;
-        proxy_set_header Host api.deepseek.com;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Content-Type $content_type;
-        proxy_set_header Authorization 'Bearer $apikey';
-        proxy_set_header Content-Length $content_length;
-        proxy_pass_request_body on;
-    }
-    location /openai {
-        set $apikey '';
-        set $access_redis_host redis;
-        set $access_redis_port 6379;
-        set $access_token_set nginx_tokens:bearer;
-        set $access_model_name gpt4o;
-        set $access_model_version v3;
-        access_by_lua_file /etc/nginx/lua-scripts/access.lua;
-        proxy_pass https://api.openai.com;
-        proxy_ssl_server_name on;
-        proxy_set_header Host api.deepseek.com;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Content-Type $content_type;
-        proxy_set_header Authorization 'Bearer $apikey';
-        proxy_set_header Content-Length $content_length;
-        proxy_pass_request_body on;
-    }
 }
