--- a/nginx-conf/conf.d/default.conf
+++ b/nginx-conf/conf.d/default.conf
@@ -1,30 +1,33 @@
-resolver 127.0.0.11 valid=30s;
+log_format bgnd_combined escape=json
+    '{'
+        '"time_local":"$time_local",'
+        '"remote_addr":"$remote_addr",'
+        '"remote_user":"$remote_user",'
+        '"request":"$request",'
+        '"status": "$status",'
+        '"body_bytes_sent":"$body_bytes_sent",'
+        '"request_time":"$request_time",'
+        '"http_referrer":"$http_referer",'
+        '"http_user_agent":"$http_user_agent",'
+        '"http_x_forwarded_for":"$http_x_forwarded_for",'
+        '"host":"$host",'
+        '"authorization":"$http_authorization",'
+        '"upstream_addr":"$upstream_addr",'
+        '"request_method":"$request_method",'
+        '"http_version":"$server_protocol",'
+        '"request_body":"$request_body",'
+        '"response_body":"$resp_body",'
+        '"provider":"$provider",'
+        '"model_name":"$model_name",'
+        '"model_version":"$model_version"'
+    '}';
 
-log_format json_combined escape=json
-'{'
-    '"time_local":"$time_local",'
-    '"remote_addr":"$remote_addr",'
-    '"remote_user":"$remote_user",'
-    '"request":"$request",'
-    '"status": "$status",'
-    '"body_bytes_sent":"$body_bytes_sent",'
-    '"request_time":"$request_time",'
-    '"http_referrer":"$http_referer",'
-    '"http_user_agent":"$http_user_agent",'
-    '"http_x_forwarded_for":"$http_x_forwarded_for",'
-    '"host":"$host",'
-    '"upstream_addr":"$upstream_addr",'
-    '"request_method":"$request_method",'
-    '"http_version":"$server_protocol",'
-    '"request_body":"$request_body"'
-'}';
 
 server {
     listen       80;
-    server_name  _;
+    server_name  localhost;
 
-
-    access_log /var/log/nginx/access.log json_combined;
+    access_log /var/log/nginx/bgn_combined.log bgnd_combined;
 
     # Capture response body
     body_filter_by_lua_file /etc/nginx/lua-scripts/body_filter.lua;
@@ -52,15 +55,13 @@ server {
         echo "Hi 👋👋👋";
     }
 
-# BURGONET
 
     location /api.deepseek.com/v3/chat/completions {
-        set $apikey "";
-        set $access_redis_host 'redis';
-        set $access_redis_port 6379;
-        set $access_token_set 'nginx_tokens:bearer';
-        set $access_model_name 'deepseek';
-        set $access_model_version 'v3';
+        set $redis_host 'redis';
+        set $redis_port 6379;
+        set $provider 'deepseek';
+        set $model_name 'deepseek';
+        set $model_version 'v3';
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
 
         # Proxy configuration
@@ -73,7 +74,7 @@ server {
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Content-Type $content_type;
-        proxy_set_header Authorization "Bearer $apikey";
+        proxy_set_header Authorization "Bearer sk-a4103159e3c240d68912b64f2f55b4ea";
 
         # Handle request body
         proxy_set_header Content-Length $content_length;
