--- a/nginx-conf/conf.d/burgonet.conf
+++ b/nginx-conf/conf.d/burgonet.conf
@@ -1,15 +1,17 @@
-log_format bgn_combined escape=json '{' '"time_local":"$time_local",' '"remote_addr":"$remote_addr",' '"remote_user":"$remote_user",' '"request":"$request",' '"status": "$status",' '"body_bytes_sent":"$body_bytes_sent",' '"request_time":"$request_time",' '"http_referrer":"$http_referer",' '"http_user_agent":"$http_user_agent",' '"http_x_forwarded_for":"$http_x_forwarded_for",' '"host":"$host",' '"upstream_addr":"$upstream_addr",' '"request_method":"$request_method",' '"http_version":"$server_protocol",' '"request_body":"$request_body",' '"response_body":"$resp_body",' '"provider":"$provider",' '"model_name":"$model_name",' '"model_version":"$model_version"' '}';
+log_format bgn_combined escape=json '{' '"time_local":"$time_local",' '"remote_addr":"$remote_addr",' '"remote_user":"$remote_user",' '"request":"$request",' '"status": "$status",' '"body_bytes_sent":"$body_bytes_sent",' '"request_time":"$request_time",' '"http_referrer":"$http_referer",' '"http_user_agent":"$http_user_agent",' '"http_x_forwarded_for":"$http_x_forwarded_for",' '"host":"$host",' '"authorization":"$http_authorization",' '"upstream_addr":"$upstream_addr",' '"request_method":"$request_method",' '"http_version":"$server_protocol",' '"request_body":"$request_body",' '"response_body":"$resp_body",' '"provider":"$provider",' '"model_name":"$model_name",' '"model_version":"$model_version"' '}';
 server {
     listen 80;
     server_name _;
     set $resp_body '';
     body_filter_by_lua_file /etc/nginx/lua-scripts/body_filter.lua;
+    access_log /var/log/nginx/burgonet.log bgn_combined;
     location /api.deepseek.com/v3/chat/completions {
         set $apikey '';
         set $redis_host redis;
         set $redis_port 6379;
         set $model_name deepseek;
         set $model_version v3;
+        set $provider deepseek;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
         proxy_pass https://api.deepseek.com;
         proxy_ssl_server_name on;
@@ -28,6 +30,7 @@ server {
         set $redis_port 6379;
         set $model_name gpt4o;
         set $model_version v3;
+        set $provider openai;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
         proxy_pass https://api.openai.com;
         proxy_ssl_server_name on;
@@ -46,6 +49,7 @@ server {
         set $redis_port 6379;
         set $model_name gpt4o;
         set $model_version v3;
+        set $provider azure;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
         proxy_ssl_server_name on;
         proxy_set_header Host api.deepseek.com;
@@ -65,8 +69,9 @@ server {
         set $redis_port 6379;
         set $model_name gemma2:2b-instruct-q6_K;
         set $model_version v3;
+        set $provider ollama;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
-        proxy_pass http://localhost:11434/api/chat;
+        proxy_pass http://m1:11434/api/chat;
         proxy_ssl_server_name on;
         proxy_set_header Host api.deepseek.com;
         proxy_set_header X-Real-IP $remote_addr;
