restrict by keywords and group

--- a/nginx-conf/conf.d/default.conf
+++ b/nginx-conf/conf.d/default.conf
@@ -27,7 +27,7 @@ server {
     listen       80;
     server_name  localhost;
 
-    access_log /var/log/nginx/bgn_combined.log bgnd_combined;
+    access_log /var/log/nginx/default.log bgnd_combined;
 
     # Capture response body
     body_filter_by_lua_file /etc/nginx/lua-scripts/body_filter.lua;
