--- a/nginx-conf/conf.d/burgonet.conf
+++ b/nginx-conf/conf.d/burgonet.conf
@@ -1,10 +1,12 @@
-log_format bgn_combined escape=json '{' '"time_local":"$time_local",' '"remote_addr":"$remote_addr",' '"remote_user":"$remote_user",' '"request":"$request",' '"status": "$status",' '"body_bytes_sent":"$body_bytes_sent",' '"request_time":"$request_time",' '"http_referrer":"$http_referer",' '"http_user_agent":"$http_user_agent",' '"http_x_forwarded_for":"$http_x_forwarded_for",' '"host":"$host",' '"authorization":"$http_authorization",' '"upstream_addr":"$upstream_addr",' '"request_method":"$request_method",' '"http_version":"$server_protocol",' '"request_body":"$request_body",' '"response_body":"$resp_body",' '"provider":"$provider",' '"model_name":"$model_name",' '"model_version":"$model_version"' '}';
+log_format bgn_combined escape=json '{' '"time_local":"$time_local",' '"time":"$msec",' '"remote_addr":"$remote_addr",' '"remote_user":"$remote_user",' '"request":"$request",' '"status": "$status",' '"body_bytes_sent":"$body_bytes_sent",' '"request_time":"$request_time",' '"http_referrer":"$http_referer",' '"http_user_agent":"$http_user_agent",' '"http_x_forwarded_for":"$http_x_forwarded_for",' '"host":"$host",' '"authorization":"$http_authorization",' '"upstream_addr":"$upstream_addr",' '"request_method":"$request_method",' '"http_version":"$server_protocol",' '"request_body":"$request_body",' '"response_body":"$resp_body",' '"provider":"$provider",' '"model_name":"$model_name",' '"model_version":"$model_version"' '}';
 server {
     listen 80;
     server_name _;
     set $resp_body '';
     body_filter_by_lua_file /etc/nginx/lua-scripts/body_filter.lua;
-    access_log /var/log/nginx/burgonet.log bgn_combined;
+    access_log syslog:server=m1:5140 bgn_combined;
+
+
     location /api.deepseek.com/v3/chat/completions {
         set $apikey '';
         set $redis_host redis;
