firs implementation of the pii feature

--- a/nginx-conf/conf.d/burgonet.conf
+++ b/nginx-conf/conf.d/burgonet.conf
@@ -72,6 +72,7 @@ server {
         set $model_name gemma2:2b-instruct-q6_K;
         set $model_version v3;
         set $provider ollama;
+        set $pii_protection_url http://m1:8001/check-pii-base64;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
         proxy_pass http://m1:11434/api/chat;
         proxy_ssl_server_name on;
