--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,6 +3,7 @@ site_name: Burgonet Gateway Documentation
 nav:
   - Home: index.md
   - Getting Started: getting-started.md
+  - Screenshots: screenshots.md
   - User Guide:
     - Use Cases: use-cases.md
     - Configuration: configuration.md
