add support of llamacpp, fix a bug in lua

--- a/nginx-conf/conf.d/burgonet.conf
+++ b/nginx-conf/conf.d/burgonet.conf
@@ -5,8 +5,6 @@ server {
     set $resp_body '';
     body_filter_by_lua_file /etc/nginx/lua-scripts/body_filter.lua;
     access_log syslog:server=m1:5140 bgn_combined;
-
-
     location /api.deepseek.com/v3/chat/completions {
         set $apikey '';
         set $redis_host redis;
@@ -15,6 +13,7 @@ server {
         set $model_version v3;
         set $provider deepseek;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
+        set $pii_protection_url '';
         proxy_pass https://api.deepseek.com;
         proxy_ssl_server_name on;
         proxy_set_header Host api.deepseek.com;
@@ -34,6 +33,7 @@ server {
         set $model_version v3;
         set $provider openai;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
+        set $pii_protection_url '';
         proxy_pass https://api.openai.com;
         proxy_ssl_server_name on;
         proxy_set_header Host api.deepseek.com;
@@ -49,10 +49,11 @@ server {
         set $apikey '';
         set $redis_host redis;
         set $redis_port 6379;
-        set $model_name gpt4o;
+        set $model_name gpt4;
         set $model_version v3;
         set $provider azure;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
+        set $pii_protection_url '';
         proxy_ssl_server_name on;
         proxy_set_header Host api.deepseek.com;
         proxy_set_header X-Real-IP $remote_addr;
@@ -72,9 +73,29 @@ server {
         set $model_name gemma2:2b-instruct-q6_K;
         set $model_version v3;
         set $provider ollama;
-        set $pii_protection_url http://m1:8001/check-pii-base64;
         access_by_lua_file /etc/nginx/lua-scripts/access.lua;
+        set $pii_protection_url http://piiserver:8000/check-pii-base64;
         proxy_pass http://m1:11434/api/chat;
+        proxy_ssl_server_name on;
+        proxy_set_header Host api.deepseek.com;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Content-Type $content_type;
+        proxy_set_header Authorization 'Bearer $apikey';
+        proxy_set_header Content-Length $content_length;
+        proxy_pass_request_body on;
+    }
+    location /llamacpp/phi4/ {
+        set $apikey '';
+        set $redis_host redis;
+        set $redis_port 6379;
+        set $model_name phi4-GGUF-Q4_K;
+        set $model_version v3;
+        set $provider llamacpp;
+        access_by_lua_file /etc/nginx/lua-scripts/access.lua;
+        set $pii_protection_url '';
+        proxy_pass http://m1:8081/completion;
         proxy_ssl_server_name on;
         proxy_set_header Host api.deepseek.com;
         proxy_set_header X-Real-IP $remote_addr;
