--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ services:
     depends_on:
       - redis
       - ldap
+      - piiserver
 
   redis:
     image: redis:latest
@@ -26,6 +27,12 @@ services:
       - "6379:6379"
     volumes:
       - redis_data:/data
+
+  piiserver:
+    image: ghcr.io/burgonet-eu/piiserver
+    container_name: piiserver
+    ports:
+      - 8000:8000
 
   ldap:
     image: osixia/openldap:latest
