--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,9 @@ redb = "2.4.0"
 chrono = "0.4"
 base64 = "0.21.7"
 once_cell = "1.19.0"
-rust-embed="8.4.0"
+rust-embed="8.5.0"
 tree_magic = "0.2.3"
+flate2 = "1.0.19"
 
 [dev-dependencies]
 env_logger = "0.9"
