--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,6 +21,9 @@ jobs:
       - uses: actions/checkout@v4
       - run: rustup update ${{ matrix.toolchain }} && rustup default ${{ matrix.toolchain }}
       - run: cargo build --verbose
+      - uses: actions/upload-artifact@v4
+        with:
+          path: target/release/burgonet-gw
 #      - run: cargo test --verbose
   
 
