--- a/conf.yml
+++ b/conf.yml
@@ -20,7 +20,8 @@ trust_header_authentication:
 models:
   - location: "/echo"
     model_name: "echo"
-    proxy_pass: "http://127.0.0.1:6190"
+    proxy_pass: "http://127.0.0.1:6190/echo"
+    parser: "echo"
     api_key: "$DEEPSEEK_API_KEY"
 
   - location: "/ollama/gemma2/2b/"
@@ -62,7 +63,7 @@ models:
     api_key: "$OPENAI_API_KEY"
 
   - location: "/api.deepseek.com/chat/completions"
-    model_name: "deepseek"
+    model_name: "deepseek-chat"
     parser: "deepseek"
     proxy_pass: "https://api.deepseek.com/chat/completions"
     api_key: "$DEEPSEEK_API_KEY"
