docs: add chat interface documentation and navigation

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -6,6 +6,7 @@ nav:
     - Use Cases: use-cases.md
     - Configuration: configuration.md
     - API Reference: api-reference.md
+    - Chat Interface: chat-interface.md
   - Technical Documentation:
     - Architecture: technical.md
   - Administration:
