--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,8 @@ once_cell = "1.19.0"
 rust-embed="8.5.0"
 tree_magic = "0.2.3"
 flate2 = "1.0.19"
+log4rs = "1.3.0"
+uuid = "1.12.1"
 
 [dev-dependencies]
 env_logger = "0.9"
