--- a/log4rs.yml
+++ b/log4rs.yml
@@ -2,10 +2,24 @@ refresh_rate: 30 seconds
 
 appenders:
   audit:
-    kind: file
+    kind: rolling_file
     path: "logs/audit.log"
     encoder:
       pattern: "{d} {l} {t} - {m}{n}"
+    policy:
+      kind: compound
+      trigger:
+        kind: size
+        limit: 50mb
+      roller:
+        kind: fixed_window
+        pattern: "logs/audit.{}.log"
+        base: 0
+        count: 5
+    rotation:
+      kind: date
+      pattern: "logs/audit.%Y-%m-%d.log"
+      naming_mode: timestamp_appended
 
   stderr:
     kind: console
@@ -23,4 +37,3 @@ loggers:
     appenders:
       - audit
     additive: false
-
